--- a/src/components/PanelLayout/PanelLayout.css
+++ b/src/components/PanelLayout/PanelLayout.css
@@ -2,6 +2,9 @@
   height: 100%;
   width: 100%;
   display: flex;
+
+  background-color: var(--color-medium-bg);
+  color: var(--color-medium-fg);
 }
 
 .PanelLayout__panel {
