--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,10 @@ code {
 :root,body,#root {
   width:100%;
   height: 100%;
+
+  box-sizing: border-box;
+}
+
+:root *,body *,#root * {
+  box-sizing: border-box;
 }
