--- a/src/components/NavigationPanel/NavigationPanel.css
+++ b/src/components/NavigationPanel/NavigationPanel.css
@@ -1,5 +1,13 @@
 .NavigationPanel__container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 0.25rem;
+
+  margin-block: 0.5rem;
   overflow: hidden;
+}
+
+.NavigationPanel__container > .Tabs__container {
+  flex: 1 1 auto;
 }
