- 1st draft of filtering   - hopefully no major bugs with it - update data

--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   flex-wrap: nowrap;
   overflow: hidden;
+
+  width: 100%;
 }
 
 .Tabs__tab-bar {
@@ -18,6 +20,8 @@
 .Tabs__tab-content {
   flex: 1 1 auto;
   overflow: auto;
+
+  padding: 0.25rem;
 }
 
 .Tab__container {
