--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@ code {
   width:100%;
   height: 100%;
 
+  background-color: var(--color-dark-bg);
+  color: var(--color-dark-fg);
+
   box-sizing: border-box;
 }
 
